$Id: History,v 1.20 2000-11-20 17:54:36 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

20/11/2000 : G. Cosmo            breps-V02-00-03
- Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o fixed order of initialisation of member data in constructors.
  o fixed usage of unsigned-int (size_t) for array indeces.

10/11/2000 : G. Cosmo            breps-V02-00-02
- Still minor QA fixes in G4Axis2Placement3D, G4BREPSolid, G4FConicalSurface.
- Fix in G4Ellipse::Project() for computation of u as function of atan2().
- Fix unit test STEPTest.cc.

09/11/2000 : G. Cosmo            breps-V02-00-01
- QA code revision and cleanup (+fixes from CodeWizard filtering):
  o Added (private) declarations of copy constructor and assignment operator
    where needed: all surfaces, BREP solids, G4CompositeCurve G4OsloMatrix,
    G4PlacedSolid, G4SurfaceList.
  o Defined/fixed copy contructor and assignment operator to curves/conics,
    G4Axis2Placement3D. Added equality check on operator= where needed.