@@ -1,4 +1,4 @@
-$Id: History,v 1.20 2000-11-20 17:54:36 gcosmo Exp $
+$Id: History,v 1.21 2001-02-05 18:45:32 gcosmo Exp $
 ----------------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+05/01/2001 : G. Cosmo            breps-V03-00-00
+- Removed useless inclusion of G4OrderedTable.hh from G4Assembly.hh and
+  G4STEPEntity.hh.
 
 20/11/2000 : G. Cosmo            breps-V02-00-03
 - Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
